# studio-rust-mcp-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release-linux.yml
go-helper/: go.mod  go.sum
plugin/: README.md
plugin-mcp2/: default.project.json
plugin-mcp2/src/: Main.server.luau
plugin/src/: Main.server.luau  MockWebSocketService.luau  Types.luau
pr-list/archive/: code-sync-node-tree-design.md
pr-list/bridge2-helper2-edit-official/: design.md
pr-list/code-sync-flush/: design.md
pr-list/code-sync-node-tree/: design.md
pr-list/explicit-launch-stop-control/: linux-stop-gate-draft.md
pr-list/explicit-session-state-launch-restart/: design.md
pr-list/helper-architecture-cleanup/: design.md
pr-list/helper-owned-studio-session-state/: design.md
pr-list/helper2-phase9-10/: design.md
pr-list/launch-prelaunch/: design.md
pr-list/local-helper-live-status-gate/: design.md
pr-list/mcp2-helper2-long-poll/: draft.md
pr-list/play-launch-id-verification/: design.md
pr-list/runtime-stop-actuator-recovery/: design.md
src/: helper_ws.rs  install.rs  main.rs  rbx_studio_server.rs
util/: helper2_local_stress_test.py  helper2_phase10_session_test.py  helper2_public_route_matrix_test.py  helper2_task_session_gate_test.py  install-ubuntu-windows-cross.sh  local_disconnect_probe.py  local_mcp_client.py  local_state_sync_probe.py  studio_debug_preflight.py  task_agent_phase9_lifecycle_test.py  tcp_proxy.py  test_plugin_session_control_cleanup.py  test_studio_debug_preflight.py  test_studio_stop_timeout_contract.py
(+89 files in other folders)
