[package]
name = "rbx-studio-mcp"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = { version = "0.8", features = ["macros", "ws"] }
reqwest = { version = "0.13", features = ["json"] }
color-eyre = "0.6"
clap = { version = "4.5.37", features = ["derive"] }
roblox_install = "1.0.0"
regex = "1.12"
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

[target.'cfg(target_os = "macos")'.dependencies]
native-dialog = "0.9"
security-translocate = "0.2.1"
core-foundation = "0.10.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_IpHelper",
  "Win32_Networking_WinSock",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
rojo = "7.6.1"

[package.metadata.bundle]
name = "RobloxStudioMCP"
description = "Model Context Protocol server for Roblox Studio"
identifier = "com.rbx-mcp.server"
